--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [macos-14, windows-latest, ubuntu-latest]
+        os: [macos-latest, windows-latest, ubuntu-latest]
         include:
           - os: ubuntu-latest
             GRADLE_ARGS: |
@@ -29,7 +29,7 @@ jobs:
               :extensions:colormath-ext-android-colorint:check
               :extensions:colormath-ext-android-color:check
               --stacktrace
-          - os: macos-14
+          - os: macos-latest
             GRADLE_ARGS: |
               macosX64Test
               :colormath:compileKotlinMacosArm64
@@ -54,8 +54,7 @@ jobs:
           distribution: 'zulu'
           java-version: 21
       - uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: ${{matrix.GRADLE_ARGS}}
+      - run: ./gradlew ${{matrix.GRADLE_ARGS}}
       - name: Upload the build report
         if: failure()
         uses: actions/upload-artifact@master
@@ -64,7 +63,7 @@ jobs:
           path: '**/build/reports'
   publish:
     needs: test
-    runs-on: macos-14
+    runs-on: macos-latest
     if: ${{ github.ref == 'refs/heads/master' && github.repository == 'ajalt/colormath' }}
     steps:
       - uses: actions/checkout@v4
@@ -72,11 +71,10 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 21
+      - uses: gradle/actions/setup-gradle@v3
       - name: Deploy to sonatype
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          # disable configuration cache due to https://github.com/gradle/gradle/issues/22779
-          arguments: publishToMavenCentral -PsnapshotVersion=true --no-configuration-cache
+        # disable configuration cache due to https://github.com/gradle/gradle/issues/22779
+        run: ./gradlew publishToMavenCentral -PsnapshotVersion=true --no-configuration-cache
     env:
       ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralPassword }}
       ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_signingInMemoryKey }}
