--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,39 +7,42 @@ on:
 
 jobs:
   release:
-    runs-on: macos-14
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: 21
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
+      - uses: gradle/actions/setup-gradle@v3
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: '3.12'
       - run: ./gradlew publishToMavenCentral
         env:
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralPassword }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_signingInMemoryKey }}
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralUsername }}
-      - name: Extract release notes
-        id: extract-release-notes
-        uses: ffurrer2/extract-release-notes@v2
-      - name: Create release
-        uses: ncipollo/release-action@v1
-        with:
-          body: ${{ steps.extract-release-notes.outputs.release_notes }}
-      - name: Dokka
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: dokkaHtml :website:wasmJsBrowserDistribution
-      - run: ./prepare_docs.sh
-      - name: Build mkdocs
-        run: |
-          pip install mkdocs-material
-          mkdocs build
-      - name: Deploy docs to website
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: site
+#      - name: Extract release notes
+#        id: extract-release-notes
+#        uses: ffurrer2/extract-release-notes@v2
+#      - name: Create release
+#        uses: ncipollo/release-action@v1
+#        with:
+#          body: ${{ steps.extract-release-notes.outputs.release_notes }}
+#      - name: Dokka
+#        uses: gradle/actions/setup-gradle@v3
+#        with:
+#          arguments: dokkaHtml :website:wasmJsBrowserDistribution
+#      - run: ./prepare_docs.sh
+#      - name: Build mkdocs
+#        run: |
+#          pip install mkdocs-material
+#          mkdocs build
+#      - name: Deploy docs to website
+#        uses: JamesIves/github-pages-deploy-action@v4
+#        with:
+#          branch: gh-pages
+#          folder: site
+env:
+  GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=false -Dkotlin.incremental=false -Dorg.gradle.project.kotlin.incremental.multiplatform=false -Dorg.gradle.project.kotlin.native.disableCompilerDaemon=true -Dorg.gradle.jvmargs="-Dfile.encoding=UTF-8"
